fix collapse and button

--- a/components/button/mdc-button.scss
+++ b/components/button/mdc-button.scss
@@ -17,7 +17,7 @@ $button-shadow: (0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.2));
     }
     @include elevation.shadow(none);
     transition: animation.enter(box-shadow, 100ms),
-        animation.exit-permanent(width, 170ms);
+        animation.enter(width, 170ms);
     &:hover,
     &:focus {
         @include elevation.shadow($button-shadow);
@@ -34,7 +34,7 @@ $button-shadow: (0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.2));
     }
     .mdc-spinner {
         border-width: 0px;
-        margin-left: 0px;        
+        margin-left: 0px;
         &.mdc-spinner-medium {
             width: 0px;
         }
